--- a/illustrative.html
+++ b/illustrative.html
@@ -128,66 +128,10 @@
               </div>
 
             </div>
-
-<!--
-            <div class="col">
-
-              Image Modal #2
-              <img src="images/illustrative/linework/2.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
-
-              <div class="modal fade image-modal-2" tabindex="-2" role="dialog" aria-labelledby="image-modal-2" aria-hidden="true">
-                <div class="modal-dialog modal-xl">
-                  <div class="modal-body">
-                    <div class="modal-content">
-                      <div class="text-left pt-3 pr-3">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                           <span aria-hidden="true">&times;</span>
-                         </button>
-                      </div>
-                      <div class="container-fluid p-5">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <img src="images/illustrative/linework/2.jpg" class="img-fluid" alt="">
-                          </div>
-                          <div class="col-md-6">
-                            <h2 class="modal-title">Blooming</h2>
-                            <p class="modal-text">Ink & Pencil Drawing </p>
-                            <p class="modal-text">Dimensions: 4.6" x  3.5"</p>
-                            <p class="modal-text">Materials:</p>
-                            <ul class="modal-text">
-                              <li>
-                                Pigma Micron 01
-                              </li>
-                              <li>
-                                Pigma Micron 08
-                              </li>
-                              <li>
-                                HB2 Pencil
-                              </li>
-                              <li>
-                                0.7 mechanical pencil
-                              </li>
-                              <li>
-                                0.5 mechanical pencil
-                              </li>
-                              <li>
-                                Shading Stomp
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div> -->
-
             <div class="col">
 
                 <!-- Image Modal #3-->
-                <img src="images/illustrative/linework/3.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+                <img src="images/illustrative/linework/3.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
 
                 <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
                   <div class="modal-dialog modal-xl">
@@ -201,7 +145,7 @@
                         <div class="container-fluid p-5">
                           <div class="row">
                             <div class="col-md-6">
-                              <img src="images/illustrative/linework/3.jpg" class="img-fluid" alt="">
+                              <img src="images/illustrative/linework/3.JPG" class="img-fluid" alt="">
                             </div>
                             <div class="col-md-6">
                               <h2 class="modal-title">Flowers for your Grave</h2>
@@ -336,8 +280,6 @@
 
             <!-- Second Row -->
           <div class="row align-items-start my-4">
-
-
             <div class="col">
               <!-- Image Modal #2-->
               <img src="images/illustrative/linework/6.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-6">
@@ -387,8 +329,6 @@
               </div>
 
             </div>
-
-
             <div class="col">
               <!-- Image Modal #7-->
               <img src="images/illustrative/linework/rose.PNG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
@@ -441,8 +381,6 @@
               </div>
 
             </div>
-
-
             <div class="col">
 
               <!-- Image Modal #8-->
@@ -496,8 +434,6 @@
               </div>
 
             </div>
-
-
             <div class="col">
 
                 <!-- Image Modal #9-->
@@ -717,9 +653,6 @@
                 </div>
               </div>
             </div>
-
-
-
             <div class="col">
 
               <!-- Image Modal #13-->
@@ -829,7 +762,6 @@
               </div>
 
             </div>
-
             <div class="col">
 
               <!-- Image Modal #15-->
@@ -1005,7 +937,7 @@
               <div class="col">
 
                 <!-- Image Modal #18-->
-                <img src="images/illustrative/miscellaneous/1.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-18">
+                <img src="images/illustrative/miscellaneous/1.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-18">
 
                 <div class="modal fade image-modal-18" tabindex="-1" role="dialog" aria-labelledby="image-modal-18" aria-hidden="true">
                   <div class="modal-dialog modal-xl">
@@ -1019,7 +951,7 @@
                         <div class="container-fluid p-5">
                           <div class="row">
                             <div class="col-md-6">
-                              <img src="images/illustrative/miscellaneous/1.jpg" class="img-fluid" alt="">
+                              <img src="images/illustrative/miscellaneous/1.JPG" class="img-fluid" alt="">
                             </div>
                             <div class="col-md-6">
                               <h2 class="modal-title">Thomas Bear</h2>
